welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:14: error: type mismatch;
 found   : Int(0)
 required: String
		return 0
                       ^